--- a/src/examples/graphify-examples-author/pom.xml
+++ b/src/examples/graphify-examples-author/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0</version>
 
     <properties>
-        <neo4j.version>2.1.3</neo4j.version>
+        <neo4j.version>3.1.1</neo4j.version>
     </properties>
 
     <dependencies>
@@ -107,4 +107,18 @@
             <version>4.1.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
