--- a/src/extension/pom.xml
+++ b/src/extension/pom.xml
@@ -142,10 +142,15 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.10</artifactId>
-            <version>2.0</version>
-            <scope>test</scope>
+            <artifactId>scalatest_2.12</artifactId>
+            <version>3.0.1</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.scalatest</groupId>-->
+            <!--<artifactId>scalatest_2.10</artifactId>-->
+            <!--<version>2.0</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.github.mdr</groupId>
             <artifactId>ascii-graphs_2.10</artifactId>
